Refactor config into a Setting hierarchy and unify commands (v5.0.0)
Replace the three parallel *Enum classes and the scattered
getter/setter pairs on CowConfig with a single sealed Setting
hierarchy (Bool/Int/Double/String/EnumSetting). Each Setting owns its
own name, properties key, default, parse, serialize, and chat-display
logic, so CowConfig is now a registry that iterates over `all` for
load/save/print and exposes settings as public final fields.

Collapse the ~15 per-setting subcommands into a uniform surface:

  /sacredcows toggle  <setting>
  /sacredcows enable  <setting>
  /sacredcows disable <setting>
  /sacredcows set     <setting> <value>
  /sacredcows get     <setting>
  /sacredcows config  <print|save|reload>

Tab completion for setting names falls out of the registry. The old
command names are gone — this is a breaking change, intentional, and
called out in the changelog. PunishmentMode also drops its `kill`,
`hurt` aliases for the same reason.

Build now runs with -Xlint:all -Werror, and a newer
error_prone_annotations is shadowed in to suppress the Gson-pulled
older version's warnings.

Also deletes the dead MilkTeleportFeature stub and an unused
registerConfigs() sketch in CowProtectionFeature.